// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer --reporter should throw when a hook is not a function 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not require \\"<project>/fixtures/test-betterer-reporter-hook-not-a-function/reporter.js\\". 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

Error: \\"contextStart\\" is not a function. 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.forEach (<anonymous>)
      at validate (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

",
]
`;

exports[`betterer --reporter should throw when there is an invalid hook 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not require \\"<project>/fixtures/test-betterer-reporter-invalid-hook/reporter.js\\". 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

Error: \\"notAHook\\" is not a valid reporter hook name. 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.forEach (<anonymous>)
      at validate (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

",
]
`;

exports[`betterer --reporter should throw when there is nothing exported 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not require \\"<project>/fixtures/test-betterer-reporter-nothing/reporter.js\\". 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

Error: \\"<project>/fixtures/test-betterer-reporter-nothing/reporter.js\\" didn't create a reporter. 😔
      at <project>/packages/betterer/dist/reporters/loader.js:0:0
      at Array.map (<anonymous>)
      at Object.loadReporters (<project>/packages/betterer/dist/reporters/loader.js:0:0)
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-reporter.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-reporter.spec.ts:0:0)

",
]
`;
